<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/albumListFragment">

    <fragment
        android:id="@+id/albumListFragment"
        android:name="com.movilesuniandes.vinilos.features.albums.view.AlbumListFragment"
        android:label="@string/nav_albums" />

    <fragment
        android:id="@+id/artistListFragment"
        android:name="com.movilesuniandes.vinilos.features.artists.view.ArtistListFragment"
        android:label="@string/nav_artists">
        <action
            android:id="@+id/action_artistListFragment_to_artistDetailFragment"
            app:destination="@id/artistDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/collectorListFragment"
        android:name="com.movilesuniandes.vinilos.features.albums.view.AlbumListFragment"
        android:label="@string/nav_collectors" />

    <fragment
        android:id="@+id/artistDetailFragment"
        android:name="com.movilesuniandes.vinilos.features.artists.view.ArtistDetailFragment"
        android:label="@string/artist_detail_title">
        <argument
            android:name="artistId"
            app:argType="integer" />
        <argument
            android:name="artistKind"
            app:argType="string" />
    </fragment>

</navigation>
